# workspace

./: .gitignore  README.md  clang-format_template  push_script.sh
cpp/cmake_tut/: CMakeLists.txt
cpp/cmake_tut/src/: foo.cpp  main.cpp
cpp/computer_graphics/opengl_tut/01_starting/: CMakeLists.txt
cpp/computer_graphics/opengl_tut/01_starting/01_first_win/: main.cpp
cpp/computer_graphics/opengl_tut/01_starting/03_shaders/: main.cpp
cpp/computer_graphics/opengl_tut/01_starting/05_transformations/: main.cpp
cpp/computer_graphics/opengl_tut/01_starting/06_coord_sys/: main.cpp
cpp/computer_graphics/opengl_tut/01_starting/07_camera/: main.cpp
cpp/computer_graphics/opengl_tut/02_lighting/: CMakeLists.txt
cpp/computer_graphics/opengl_tut/02_lighting/01_colors/: main.cpp
cpp/computer_graphics/opengl_tut/02_lighting/02_basic_lighting/: main.cpp
cpp/computer_graphics/opengl_tut/02_lighting/03_materials/: main.cpp
cpp/computer_graphics/opengl_tut/02_lighting/04_lighting_maps/: main.cpp
cpp/computer_graphics/opengl_tut/02_lighting/05_light_casters/: main.cpp
cpp/computer_graphics/opengl_tut/02_lighting/06_multiple_light/: main.cpp
cpp/computer_graphics/opengl_tut/03_model_loading/: CMakeLists.txt  main.cpp
cpp/computer_graphics/opengl_tut/04_advanced_opengl/: CMakeLists.txt
cpp/computer_graphics/opengl_tut/04_advanced_opengl/01_depth_testing/: main.cpp
cpp/computer_graphics/opengl_tut/04_advanced_opengl/02_stencil_testing/: main.cpp
cpp/computer_graphics/opengl_tut/04_advanced_opengl/03_blending/: main.cpp
cpp/computer_graphics/opengl_tut/04_advanced_opengl/04_face_culling/: main.cpp
cpp/computer_graphics/opengl_tut/04_advanced_opengl/05_framebuffers/: Camera_q.h  main.cpp
cpp/computer_graphics/opengl_tut/04_advanced_opengl/06_cubemaps/: main.cpp
cpp/computer_graphics/opengl_tut/04_advanced_opengl/07_advanced_data_glsl/: main.cpp
cpp/computer_graphics/opengl_tut/04_advanced_opengl/08_geometry_shader/: main.cpp
cpp/computer_graphics/opengl_tut/04_advanced_opengl/09_instancing/: main.cpp
cpp/computer_graphics/opengl_tut/04_advanced_opengl/10_anti_aliasing/: main.cpp
cpp/computer_graphics/opengl_tut/practice/: CMakeLists.txt
cpp/computer_graphics/opengl_tut/practice/01_text_rendering/: main.cpp
cpp/computer_graphics/opengl_tut/practice/02_game2D/: Ball_object.h  Game.h  Game_level.h  Game_object.h  Makefile  Particle_generator.h  Post_processor.h  Power_up.h  Resource_manager.h  Shader.h  Sprite_renderer.h  Texture.h  main.cpp
cpp/computer_graphics/opengl_tut/practice/02_game2D/shaders/: particle.frag  particle.vert  post_process.frag  post_process.vert  sprite.frag  sprite.vert
cpp/computer_graphics/sb_tut/practice/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cpp/computer_graphics/sb_tut/practice/include/: Audio_manager.h  Ball2D.h  Game_object_2D.h  Helper_structures.h  OpenGL_base.h  PingPongPad.h  Renderer_2D.h  Shader_helper.h  Vertices_helper.h
cpp/computer_graphics/sb_tut/practice/src/: glad.c
cpp/computer_graphics/sb_tut/practice/src/01_simplePlot2D/: .01_emptyWindow.cpp.swp  01_simplePlot2D.cpp
cpp/computer_graphics/sb_tut/practice/src/02_simplePingPong/: 02_simplePingPong.cpp
cpp/computer_graphics/sb_tut/practice/src/03_PingPong_with_sound/: 03_PingPong_with_sound.cpp
cpp/computer_graphics/sb_tut/practice/src/shaders/: 01_coords.vert  01_default.frag  01_default.vert  pong_pad.vert
cpp/file_system/: CMakeLists.txt  Makefile  Makefile_backup  example1.exe.stackdump  example2.exe.stackdump
cpp/file_system/dep/: FileNameValidator.d  StringReplaceCommand.d
cpp/file_system/include/: BatchFileRenamer.h  BatchFileRenamer.hpp  CaseModifyCommand.h  CaseModifyCommand.hpp  ConcreteFileDecorator.hpp  FileDecorator.hpp  FileNameValidator.h  FileNameValidator.hpp  FileOrganizer.h  FileOverwritePrompt.h  FileRenameCommandBase.h  FileRenameCommandInterface.hpp  FileRenameContext.hpp  FileRenameStrategy.hpp  FileReplaceStrategy.hpp  FilenameReplaceDecorator.hpp  IFileDecorator.hpp  MP3BatchFileRenamer.h  MP3ReplaceCommand.h  MP3Tag.h  MP3Tag.hpp  StringAppendCommand.h  StringAppendCommand.hpp  StringHelper.h  StringHelper.hpp  StringRemovalCommand.hpp  StringReplaceCommand.h  StringReplaceCommand.hpp  SyncsafeIntConverter.h  Utilities.h
cpp/file_system/src/: BatchFileRenamer.cpp  CaseModifyCommand.cpp  FileNameValidator.cpp  FileOrganizer.cpp  FileOverwritePrompt.cpp  FileRenameCommandBase.cpp  MP3BatchFileRenamer.cpp  MP3ReplaceCommand.cpp  MP3Tag.cpp  StringAppendCommand.cpp  StringHelper.cpp  StringReplaceCommand.cpp  SyncsafeIntConverter.cpp  Utilities.cpp  batch_rename_files.cpp  check_locale_encoding.cpp  example1.cpp  example2.cpp  mp3_batch_rename_files.cpp  organize_files.cpp  show_disk_usage.cpp  show_files_in_directory.cpp
cpp/learning/OpenGL/: CMakeLists.txt  Config.h.in  Makefile  Makefile_backup
cpp/learning/OpenGL/include/: Config.h
cpp/learning/OpenGL/include/glad/: glad.h
cpp/learning/OpenGL/include/shader_tools/: ShaderCreator.h  ShaderProgram.h
cpp/learning/OpenGL/include/window_tools/: WindowController.h  WindowLoader.h
cpp/learning/OpenGL/src/: CMakeLists.txt  glad.c  hello_shaders.cpp  hello_texture.cpp  hello_triangle.cpp  hello_window.cpp
cpp/learning/OpenGL/src/01_starting/: CMakeLists.txt  hello_shaders.cpp  hello_texture.cpp  hello_triangle.cpp  hello_window.cpp
cpp/learning/OpenGL/src/glad/: CMakeLists.txt
cpp/learning/OpenGL/src/shader_tools/: CMakeLists.txt  ShaderCreator.cpp  ShaderProgram.cpp
cpp/learning/OpenGL/src/window_tools/: CMakeLists.txt  WindowController.cpp  WindowLoader.cpp
cpp/learning/design_patterns/behavioral/: .clang-format  CMakeLists.txt
cpp/learning/design_patterns/behavioral/command/: CMakeLists.txt  Makefile
cpp/learning/design_patterns/behavioral/command/command_build/: CMakeCache.txt
cpp/learning/design_patterns/behavioral/command/src/: CMakeLists.txt  example1.cpp  giant.cpp  (+2 more)
cpp/learning/design_patterns/behavioral/strategy/: CMakeLists.txt
cpp/learning/design_patterns/structural/decorator/: CMakeLists.txt  Makefile
(+1579 files in other folders)
